--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,7 +27,7 @@ classifiers = [
 keywords = ["cloud", "ML", "AI", "serverless", "distributed", "parallel", "machine-learning", "deep-learning", "pythagoras"]
 dependencies = [
     "parameterizable",
-    "persidict==0.32.2",
+    "persidict",
     "lz4",
     "joblib",
     "scikit-learn",
