--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,8 +26,8 @@ classifiers = [
 ]
 keywords = ["cloud", "ML", "AI", "serverless", "distributed", "parallel", "machine-learning", "deep-learning", "pythagoras"]
 dependencies = [
-    "parameterizable==0.11.2",
-    "persidict==0.38.0",
+    "parameterizable",
+    "persidict",
     "lz4",
     "joblib",
     "scikit-learn",
