--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "uv_build"
 
 [project]
 name = "pythagoras"
-version = "0.24.10"
+version = "0.24.11"
 authors = [
     {name = "Volodymyr (Vlad) Pavlov", email = "vlpavlov@ieee.org"},
 ]
@@ -41,7 +41,7 @@ dependencies = [
     "moto",
     "uv",
     "nvidia-ml-py",
-    "parameterizable==0.101.0",
+    "parameterizable==0.101.0"
 ]
 
 [project.urls]
