REF: Decouple `pynvml` import to within function in `system_utils.py`, handle `ModuleNotFoundError`, and reorganize `nvidia-ml-py` dependency in `pyproject.toml`

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,7 +43,6 @@ dependencies = [
     "boto3",
     "moto",
     "uv",
-    "nvidia-ml-py",
     "parameterizable",
 ]
 
@@ -67,4 +66,8 @@ aws = [
     "persidict[aws]"
     ,"boto3"
     ,"moto"
+]
+
+nvidia = [
+    "nvidia-ml-py"
 ]
